<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/roundrect"
        android:fillViewport="true">

        <TextView
            android:id="@+id/text_calc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="123456789"
            android:textAlignment="viewEnd"
            android:textColor="@color/window_calc_color"
            android:textSize="@dimen/window_calc_number_size"
            android:textStyle="bold" />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="@dimen/size_button"
            android:layout_height="@dimen/size_button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="@dimen/size_button"
            android:layout_height="@dimen/size_button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="@dimen/size_button"
            android:layout_height="@dimen/size_button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/size_button"
            android:layout_height="@dimen/size_button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_3"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_3"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_3"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="2.04"
            android:background="@drawable/button_stile_1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_1"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_3"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dropping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_2"
            android:text="@string/dropping"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_stile_2"
            android:text="@string/equally"
            android:textColor="@color/white"
            android:textSize="@dimen/number_text_size" />

    </LinearLayout>

</LinearLayout>